--- a/pca10040e/s112/arm5_no_packs/ble_app_template_pca10040e_s112.uvprojx
+++ b/pca10040e/s112/arm5_no_packs/ble_app_template_pca10040e_s112.uvprojx
@@ -336,9 +336,9 @@
             <v6Rtti>0</v6Rtti>
             <VariousControls>
               <MiscControls>--reduce_paths --diag_suppress=550</MiscControls>
-              <Define>MI_BLE_ENABLED HAVE_MSC=1 MI_ASSERT MI_LOG_ENABLED BOARD_PCA10040 CONFIG_GPIO_AS_PINRESET DEVELOP_IN_NRF52832 FLOAT_ABI_SOFT NRF52810_XXAA NRF52_PAN_74 NRF_SD_BLE_API_VERSION=6 S112 SOFTDEVICE_PRESENT SWI_DISABLE0 __HEAP_SIZE=512 __STACK_SIZE=4096</Define>
+              <Define>CUSTOMIZED_MI_CONFIG_FILE=&lt;custom_mi_config.h&gt; MI_LOG_ENABLED  MI_ASSERT MI_LOG_ENABLED BOARD_PCA10040 CONFIG_GPIO_AS_PINRESET DEVELOP_IN_NRF52832 FLOAT_ABI_SOFT NRF52810_XXAA NRF52_PAN_74 NRF_SD_BLE_API_VERSION=6 S112 SOFTDEVICE_PRESENT SWI_DISABLE0 __HEAP_SIZE=512 __STACK_SIZE=4096</Define>
               <Undefine></Undefine>
-              <IncludePath>..\..\..\config;..\..\..\..\..\..\components;..\..\..\..\..\..\components\ble\ble_advertising;..\..\..\..\..\..\components\ble\ble_dtm;..\..\..\..\..\..\components\ble\ble_racp;..\..\..\..\..\..\components\ble\ble_services\ble_ancs_c;..\..\..\..\..\..\components\ble\ble_services\ble_ans_c;..\..\..\..\..\..\components\ble\ble_services\ble_bas;..\..\..\..\..\..\components\ble\ble_services\ble_bas_c;..\..\..\..\..\..\components\ble\ble_services\ble_cscs;..\..\..\..\..\..\components\ble\ble_services\ble_cts_c;..\..\..\..\..\..\components\ble\ble_services\ble_dfu;..\..\..\..\..\..\components\ble\ble_services\ble_dis;..\..\..\..\..\..\components\ble\ble_services\ble_gls;..\..\..\..\..\..\components\ble\ble_services\ble_hids;..\..\..\..\..\..\components\ble\ble_services\ble_hrs;..\..\..\..\..\..\components\ble\ble_services\ble_hrs_c;..\..\..\..\..\..\components\ble\ble_services\ble_hts;..\..\..\..\..\..\components\ble\ble_services\ble_ias;..\..\..\..\..\..\components\ble\ble_services\ble_ias_c;..\..\..\..\..\..\components\ble\ble_services\ble_lbs;..\..\..\..\..\..\components\ble\ble_services\ble_lbs_c;..\..\..\..\..\..\components\ble\ble_services\ble_lls;..\..\..\..\..\..\components\ble\ble_services\ble_nus;..\..\..\..\..\..\components\ble\ble_services\ble_nus_c;..\..\..\..\..\..\components\ble\ble_services\ble_rscs;..\..\..\..\..\..\components\ble\ble_services\ble_rscs_c;..\..\..\..\..\..\components\ble\ble_services\ble_tps;..\..\..\..\..\..\components\ble\common;..\..\..\..\..\..\components\ble\nrf_ble_gatt;..\..\..\..\..\..\components\ble\nrf_ble_qwr;..\..\..\..\..\..\components\ble\peer_manager;..\..\..\..\..\..\components\boards;..\..\..\..\..\..\components\drivers_nrf\usbd;..\..\..\..\..\..\components\libraries\atomic;..\..\..\..\..\..\components\libraries\atomic_fifo;..\..\..\..\..\..\components\libraries\atomic_flags;..\..\..\..\..\..\components\libraries\balloc;..\..\..\..\..\..\components\libraries\bootloader\ble_dfu;..\..\..\..\..\..\components\libraries\bsp;..\..\..\..\..\..\components\libraries\button;..\..\..\..\..\..\components\libraries\cli;..\..\..\..\..\..\components\libraries\crc16;..\..\..\..\..\..\components\libraries\crc32;..\..\..\..\..\..\components\libraries\crypto;..\..\..\..\..\..\components\libraries\csense;..\..\..\..\..\..\components\libraries\csense_drv;..\..\..\..\..\..\components\libraries\delay;..\..\..\..\..\..\components\libraries\ecc;..\..\..\..\..\..\components\libraries\experimental_section_vars;..\..\..\..\..\..\components\libraries\experimental_task_manager;..\..\..\..\..\..\components\libraries\fds;..\..\..\..\..\..\components\libraries\fstorage;..\..\..\..\..\..\components\libraries\gfx;..\..\..\..\..\..\components\libraries\gpiote;..\..\..\..\..\..\components\libraries\hardfault;..\..\..\..\..\..\components\libraries\hci;..\..\..\..\..\..\components\libraries\led_softblink;..\..\..\..\..\..\components\libraries\log;..\..\..\..\..\..\components\libraries\log\src;..\..\..\..\..\..\components\libraries\low_power_pwm;..\..\..\..\..\..\components\libraries\mem_manager;..\..\..\..\..\..\components\libraries\memobj;..\..\..\..\..\..\components\libraries\mpu;..\..\..\..\..\..\components\libraries\mutex;..\..\..\..\..\..\components\libraries\pwm;..\..\..\..\..\..\components\libraries\pwr_mgmt;..\..\..\..\..\..\components\libraries\queue;..\..\..\..\..\..\components\libraries\ringbuf;..\..\..\..\..\..\components\libraries\scheduler;..\..\..\..\..\..\components\libraries\sdcard;..\..\..\..\..\..\components\libraries\sensorsim;..\..\..\..\..\..\components\libraries\slip;..\..\..\..\..\..\components\libraries\sortlist;..\..\..\..\..\..\components\libraries\spi_mngr;..\..\..\..\..\..\components\libraries\stack_guard;..\..\..\..\..\..\components\libraries\strerror;..\..\..\..\..\..\components\libraries\svc;..\..\..\..\..\..\components\libraries\timer;..\..\..\..\..\..\components\libraries\twi_mngr;..\..\..\..\..\..\components\libraries\twi_sensor;..\..\..\..\..\..\components\libraries\usbd;..\..\..\..\..\..\components\libraries\usbd\class\audio;..\..\..\..\..\..\components\libraries\usbd\class\cdc;..\..\..\..\..\..\components\libraries\usbd\class\cdc\acm;..\..\..\..\..\..\components\libraries\usbd\class\hid;..\..\..\..\..\..\components\libraries\usbd\class\hid\generic;..\..\..\..\..\..\components\libraries\usbd\class\hid\kbd;..\..\..\..\..\..\components\libraries\usbd\class\hid\mouse;..\..\..\..\..\..\components\libraries\usbd\class\msc;..\..\..\..\..\..\components\libraries\util;..\..\..\..\..\..\components\softdevice\common;..\..\..\..\..\..\components\softdevice\s112\headers;..\..\..\..\..\..\components\softdevice\s112\headers\nrf52;..\..\..\..\..\..\external\fprintf;..\..\..\..\..\..\external\segger_rtt;..\..\..\..\..\..\external\utf_converter;..\..\..\..\..\..\integration\nrfx;..\..\..\..\..\..\integration\nrfx\legacy;..\..\..\..\..\..\modules\nrfx;..\..\..\..\..\..\modules\nrfx\drivers\include;..\..\..\..\..\..\modules\nrfx\hal;..\..\..\..\..\..\modules\nrfx\mdk;..\config;..\..\..\mijia_ble_api;..\..\..\mijia_ble_libs</IncludePath>
+              <IncludePath>..\..\..\config;..\..\..\..\..\..\components;..\..\..\..\..\..\components\ble\ble_advertising;..\..\..\..\..\..\components\ble\ble_dtm;..\..\..\..\..\..\components\ble\ble_racp;..\..\..\..\..\..\components\ble\ble_services\ble_ancs_c;..\..\..\..\..\..\components\ble\ble_services\ble_ans_c;..\..\..\..\..\..\components\ble\ble_services\ble_bas;..\..\..\..\..\..\components\ble\ble_services\ble_bas_c;..\..\..\..\..\..\components\ble\ble_services\ble_cscs;..\..\..\..\..\..\components\ble\ble_services\ble_cts_c;..\..\..\..\..\..\components\ble\ble_services\ble_dfu;..\..\..\..\..\..\components\ble\ble_services\ble_dis;..\..\..\..\..\..\components\ble\ble_services\ble_gls;..\..\..\..\..\..\components\ble\ble_services\ble_hids;..\..\..\..\..\..\components\ble\ble_services\ble_hrs;..\..\..\..\..\..\components\ble\ble_services\ble_hrs_c;..\..\..\..\..\..\components\ble\ble_services\ble_hts;..\..\..\..\..\..\components\ble\ble_services\ble_ias;..\..\..\..\..\..\components\ble\ble_services\ble_ias_c;..\..\..\..\..\..\components\ble\ble_services\ble_lbs;..\..\..\..\..\..\components\ble\ble_services\ble_lbs_c;..\..\..\..\..\..\components\ble\ble_services\ble_lls;..\..\..\..\..\..\components\ble\ble_services\ble_nus;..\..\..\..\..\..\components\ble\ble_services\ble_nus_c;..\..\..\..\..\..\components\ble\ble_services\ble_rscs;..\..\..\..\..\..\components\ble\ble_services\ble_rscs_c;..\..\..\..\..\..\components\ble\ble_services\ble_tps;..\..\..\..\..\..\components\ble\common;..\..\..\..\..\..\components\ble\nrf_ble_gatt;..\..\..\..\..\..\components\ble\nrf_ble_qwr;..\..\..\..\..\..\components\ble\peer_manager;..\..\..\..\..\..\components\boards;..\..\..\..\..\..\components\drivers_nrf\usbd;..\..\..\..\..\..\components\libraries\atomic;..\..\..\..\..\..\components\libraries\atomic_fifo;..\..\..\..\..\..\components\libraries\atomic_flags;..\..\..\..\..\..\components\libraries\balloc;..\..\..\..\..\..\components\libraries\bootloader\ble_dfu;..\..\..\..\..\..\components\libraries\bsp;..\..\..\..\..\..\components\libraries\button;..\..\..\..\..\..\components\libraries\cli;..\..\..\..\..\..\components\libraries\crc16;..\..\..\..\..\..\components\libraries\crc32;..\..\..\..\..\..\components\libraries\crypto;..\..\..\..\..\..\components\libraries\csense;..\..\..\..\..\..\components\libraries\csense_drv;..\..\..\..\..\..\components\libraries\delay;..\..\..\..\..\..\components\libraries\ecc;..\..\..\..\..\..\components\libraries\experimental_section_vars;..\..\..\..\..\..\components\libraries\experimental_task_manager;..\..\..\..\..\..\components\libraries\fds;..\..\..\..\..\..\components\libraries\fstorage;..\..\..\..\..\..\components\libraries\gfx;..\..\..\..\..\..\components\libraries\gpiote;..\..\..\..\..\..\components\libraries\hardfault;..\..\..\..\..\..\components\libraries\hci;..\..\..\..\..\..\components\libraries\led_softblink;..\..\..\..\..\..\components\libraries\log;..\..\..\..\..\..\components\libraries\log\src;..\..\..\..\..\..\components\libraries\low_power_pwm;..\..\..\..\..\..\components\libraries\mem_manager;..\..\..\..\..\..\components\libraries\memobj;..\..\..\..\..\..\components\libraries\mpu;..\..\..\..\..\..\components\libraries\mutex;..\..\..\..\..\..\components\libraries\pwm;..\..\..\..\..\..\components\libraries\pwr_mgmt;..\..\..\..\..\..\components\libraries\queue;..\..\..\..\..\..\components\libraries\ringbuf;..\..\..\..\..\..\components\libraries\scheduler;..\..\..\..\..\..\components\libraries\sdcard;..\..\..\..\..\..\components\libraries\sensorsim;..\..\..\..\..\..\components\libraries\slip;..\..\..\..\..\..\components\libraries\sortlist;..\..\..\..\..\..\components\libraries\spi_mngr;..\..\..\..\..\..\components\libraries\stack_guard;..\..\..\..\..\..\components\libraries\strerror;..\..\..\..\..\..\components\libraries\svc;..\..\..\..\..\..\components\libraries\timer;..\..\..\..\..\..\components\libraries\twi_mngr;..\..\..\..\..\..\components\libraries\twi_sensor;..\..\..\..\..\..\components\libraries\usbd;..\..\..\..\..\..\components\libraries\usbd\class\audio;..\..\..\..\..\..\components\libraries\usbd\class\cdc;..\..\..\..\..\..\components\libraries\usbd\class\cdc\acm;..\..\..\..\..\..\components\libraries\usbd\class\hid;..\..\..\..\..\..\components\libraries\usbd\class\hid\generic;..\..\..\..\..\..\components\libraries\usbd\class\hid\kbd;..\..\..\..\..\..\components\libraries\usbd\class\hid\mouse;..\..\..\..\..\..\components\libraries\usbd\class\msc;..\..\..\..\..\..\components\libraries\util;..\..\..\..\..\..\components\softdevice\common;..\..\..\..\..\..\components\softdevice\s112\headers;..\..\..\..\..\..\components\softdevice\s112\headers\nrf52;..\..\..\..\..\..\external\fprintf;..\..\..\..\..\..\external\segger_rtt;..\..\..\..\..\..\external\utf_converter;..\..\..\..\..\..\integration\nrfx;..\..\..\..\..\..\integration\nrfx\legacy;..\..\..\..\..\..\modules\nrfx;..\..\..\..\..\..\modules\nrfx\drivers\include;..\..\..\..\..\..\modules\nrfx\hal;..\..\..\..\..\..\modules\nrfx\mdk;..\config;..\..\..\mijia_ble_api;..\..\..\mijia_ble_libs;..\..\..\</IncludePath>
             </VariousControls>
           </Cads>
           <Aads>
@@ -500,9 +500,9 @@
               </FileOption>
             </File>
             <File>
-              <FileName>mi_config.h</FileName>
+              <FileName>custom_mi_config.h</FileName>
               <FileType>5</FileType>
-              <FilePath>..\..\..\mijia_ble_libs\mi_config.h</FilePath>
+              <FilePath>..\..\..\custom_mi_config.h</FilePath>
             </File>
           </Files>
         </Group>
@@ -3288,11 +3288,6 @@
           <GroupName>mijia_ble_libs/common</GroupName>
           <Files>
             <File>
-              <FileName>crc32.c</FileName>
-              <FileType>1</FileType>
-              <FilePath>..\..\..\mijia_ble_libs\common\crc32.c</FilePath>
-            </File>
-            <File>
               <FileName>mible_beacon.c</FileName>
               <FileType>1</FileType>
               <FilePath>..\..\..\mijia_ble_libs\common\mible_beacon.c</FilePath>
@@ -3312,20 +3307,15 @@
               <FileType>1</FileType>
               <FilePath>..\..\..\mijia_ble_libs\common\queue.c</FilePath>
             </File>
-            <File>
-              <FileName>tlv.c</FileName>
-              <FileType>1</FileType>
-              <FilePath>..\..\..\mijia_ble_libs\common\tlv.c</FilePath>
-            </File>
           </Files>
         </Group>
         <Group>
-          <GroupName>mijia_ble_libs/secure_auth</GroupName>
+          <GroupName>mijia_ble_libs/stand_auth</GroupName>
           <Files>
             <File>
-              <FileName>mible_secure_auth.c</FileName>
-              <FileType>1</FileType>
-              <FilePath>..\..\..\mijia_ble_libs\secure_auth\mible_secure_auth.c</FilePath>
+              <FileName>..\..\nRF5_SDK_15.2.0\examples\ble_peripheral\mijia_ble_standard\mijia_ble_libs\standard_auth\stand-auth-cortex-m4.lib</FileName>
+              <FileType>4</FileType>
+              <FilePath>$TC_ROOT$\..\..\nRF5_SDK_15.2.0\examples\ble_peripheral\mijia_ble_standard\mijia_ble_libs\standard_auth\stand-auth-cortex-m4.lib</FilePath>
             </File>
           </Files>
         </Group>
@@ -3343,9 +3333,9 @@
               <FilePath>..\..\..\mijia_ble_libs\cryptography\mi_crypto_backend_mbedtls.c</FilePath>
             </File>
             <File>
-              <FileName>mi_crypto_backend_msc.c</FileName>
+              <FileName>mi_crypto_backend_uECC.c</FileName>
               <FileType>1</FileType>
-              <FilePath>..\..\..\mijia_ble_libs\cryptography\mi_crypto_backend_msc.c</FilePath>
+              <FilePath>..\..\..\mijia_ble_libs\cryptography\mi_crypto_backend_uECC.c</FilePath>
             </File>
           </Files>
         </Group>
@@ -3371,6 +3361,11 @@
               <FileName>sha256_hkdf.c</FileName>
               <FileType>1</FileType>
               <FilePath>..\..\..\mijia_ble_libs\third_party\mbedtls\sha256_hkdf.c</FilePath>
+            </File>
+            <File>
+              <FileName>uECC.c</FileName>
+              <FileType>1</FileType>
+              <FilePath>..\..\..\mijia_ble_libs\third_party\micro-ecc\uECC.c</FilePath>
             </File>
           </Files>
         </Group>
@@ -3793,9 +3788,9 @@
               <FilePath>..\..\..\time.c</FilePath>
             </File>
             <File>
-              <FileName>mi_config.h</FileName>
+              <FileName>custom_mi_config.h</FileName>
               <FileType>5</FileType>
-              <FilePath>..\..\..\mijia_ble_libs\mi_config.h</FilePath>
+              <FilePath>..\..\..\custom_mi_config.h</FilePath>
             </File>
           </Files>
         </Group>
@@ -6581,11 +6576,6 @@
           <GroupName>mijia_ble_libs/common</GroupName>
           <Files>
             <File>
-              <FileName>crc32.c</FileName>
-              <FileType>1</FileType>
-              <FilePath>..\..\..\mijia_ble_libs\common\crc32.c</FilePath>
-            </File>
-            <File>
               <FileName>mible_beacon.c</FileName>
               <FileType>1</FileType>
               <FilePath>..\..\..\mijia_ble_libs\common\mible_beacon.c</FilePath>
@@ -6605,20 +6595,15 @@
               <FileType>1</FileType>
               <FilePath>..\..\..\mijia_ble_libs\common\queue.c</FilePath>
             </File>
-            <File>
-              <FileName>tlv.c</FileName>
-              <FileType>1</FileType>
-              <FilePath>..\..\..\mijia_ble_libs\common\tlv.c</FilePath>
-            </File>
           </Files>
         </Group>
         <Group>
-          <GroupName>mijia_ble_libs/secure_auth</GroupName>
+          <GroupName>mijia_ble_libs/stand_auth</GroupName>
           <Files>
             <File>
-              <FileName>mible_secure_auth.c</FileName>
-              <FileType>1</FileType>
-              <FilePath>..\..\..\mijia_ble_libs\secure_auth\mible_secure_auth.c</FilePath>
+              <FileName>..\..\nRF5_SDK_15.2.0\examples\ble_peripheral\mijia_ble_standard\mijia_ble_libs\standard_auth\stand-auth-cortex-m4.lib</FileName>
+              <FileType>4</FileType>
+              <FilePath>$TC_ROOT$\..\..\nRF5_SDK_15.2.0\examples\ble_peripheral\mijia_ble_standard\mijia_ble_libs\standard_auth\stand-auth-cortex-m4.lib</FilePath>
             </File>
           </Files>
         </Group>
@@ -6636,9 +6621,9 @@
               <FilePath>..\..\..\mijia_ble_libs\cryptography\mi_crypto_backend_mbedtls.c</FilePath>
             </File>
             <File>
-              <FileName>mi_crypto_backend_msc.c</FileName>
+              <FileName>mi_crypto_backend_uECC.c</FileName>
               <FileType>1</FileType>
-              <FilePath>..\..\..\mijia_ble_libs\cryptography\mi_crypto_backend_msc.c</FilePath>
+              <FilePath>..\..\..\mijia_ble_libs\cryptography\mi_crypto_backend_uECC.c</FilePath>
             </File>
           </Files>
         </Group>
@@ -6664,6 +6649,11 @@
               <FileName>sha256_hkdf.c</FileName>
               <FileType>1</FileType>
               <FilePath>..\..\..\mijia_ble_libs\third_party\mbedtls\sha256_hkdf.c</FilePath>
+            </File>
+            <File>
+              <FileName>uECC.c</FileName>
+              <FileType>1</FileType>
+              <FilePath>..\..\..\mijia_ble_libs\third_party\micro-ecc\uECC.c</FilePath>
             </File>
           </Files>
         </Group>
