--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "mijia_ble_libs"]
 	path = mijia_ble_libs
 	url = git@github.com:MiEcosystem/mijia_ble_libs.git
+[submodule "demos/Dialog/portable"]
+	path = demos/Dialog/portable
+	url = git@github.com:MiEcosystem/mijia_ble_api.git
