update mijia ble libs : stand auth 1.0.1

--- a/pca10040/s132/arm5_no_packs/ble_app_template_pca10040_s132.uvprojx
+++ b/pca10040/s132/arm5_no_packs/ble_app_template_pca10040_s132.uvprojx
@@ -3256,15 +3256,20 @@
               <FileType>1</FileType>
               <FilePath>..\..\..\mijia_ble_libs\common\queue.c</FilePath>
             </File>
+            <File>
+              <FileName>mi_config.c</FileName>
+              <FileType>1</FileType>
+              <FilePath>..\..\..\mijia_ble_libs\mi_config.c</FilePath>
+            </File>
           </Files>
         </Group>
         <Group>
           <GroupName>mijia_ble_libs/standard_auth</GroupName>
           <Files>
             <File>
-              <FileName>..\..\nRF5_SDK_15.2.0\examples\ble_peripheral\mijia_ble_standard\mijia_ble_libs\standard_auth\stand-auth-cortex-m4f.lib</FileName>
+              <FileName>stand-auth-cortex-m4f.lib</FileName>
               <FileType>4</FileType>
-              <FilePath>$TC_ROOT$\..\..\nRF5_SDK_15.2.0\examples\ble_peripheral\mijia_ble_standard\mijia_ble_libs\standard_auth\stand-auth-cortex-m4f.lib</FilePath>
+              <FilePath>..\..\..\mijia_ble_libs\standard_auth\stand-auth-cortex-m4f.lib</FilePath>
             </File>
           </Files>
         </Group>
@@ -6488,15 +6493,20 @@
               <FileType>1</FileType>
               <FilePath>..\..\..\mijia_ble_libs\common\queue.c</FilePath>
             </File>
+            <File>
+              <FileName>mi_config.c</FileName>
+              <FileType>1</FileType>
+              <FilePath>..\..\..\mijia_ble_libs\mi_config.c</FilePath>
+            </File>
           </Files>
         </Group>
         <Group>
           <GroupName>mijia_ble_libs/standard_auth</GroupName>
           <Files>
             <File>
-              <FileName>..\..\nRF5_SDK_15.2.0\examples\ble_peripheral\mijia_ble_standard\mijia_ble_libs\standard_auth\stand-auth-cortex-m4f.lib</FileName>
+              <FileName>stand-auth-cortex-m4f.lib</FileName>
               <FileType>4</FileType>
-              <FilePath>$TC_ROOT$\..\..\nRF5_SDK_15.2.0\examples\ble_peripheral\mijia_ble_standard\mijia_ble_libs\standard_auth\stand-auth-cortex-m4f.lib</FilePath>
+              <FilePath>..\..\..\mijia_ble_libs\standard_auth\stand-auth-cortex-m4f.lib</FilePath>
             </File>
           </Files>
         </Group>
